Sidebar-Initial design

--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<div id="app"></div>
+<section class="sidebar">
+	<nav class="sidebar-nav">
+		<div class="sidebar-container">
+			<ul class="vertical-list">
+				<li>
+					<a href="#"><span>About</span></a>
+				</li>
+				<li>
+          <a href="#">
+            <span>Projects</span>
+          </a>
+				</li>
+				<li><a href="#"><span>Services</span></a></li>
+				<li><a href="#"><span>Contact Me</span></a></li>
+			</ul>
+		</div>
+	</nav>
+</section>
+
+<section class="content">
+	<div id="app"></div>
+</section>
