--- a/index.html
+++ b/index.html
@@ -1,22 +1,44 @@
-<section class="sidebar">
-	<nav class="sidebar-nav">
-		<div class="sidebar-container">
-			<ul class="vertical-list">
-				<li>
-					<a href="#"><span>About</span></a>
-				</li>
-				<li>
-          <a href="#">
-            <span>Projects</span>
-          </a>
-				</li>
-				<li><a href="#"><span>Services</span></a></li>
-				<li><a href="#"><span>Contact Me</span></a></li>
-			</ul>
-		</div>
-	</nav>
-</section>
+<!DOCTYPE html>
+<html lang="en">
 
-<section class="content">
-	<div id="app"></div>
-</section>
+<head>
+	<meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=11" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="description" content="An online portfolio for srinivasankk as software developer">
+  <title>SrinivasanKK Online Portfolio</title>
+	<link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+	<section class="sidebar">
+		<nav class="sidebar-nav">
+			<div class="sidebar-container">
+				<ul class="vertical-list">
+					<li>
+						<a href="#"><span>About</span></a>
+					</li>
+					<li>
+						<a href="#">
+							<span>Projects</span>
+						</a>
+					</li>
+					<li><a href="#"><span>Services</span></a></li>
+					<li><a href="#"><span>Contact Me</span></a></li>
+				</ul>
+			</div>
+		</nav>
+	</section>
+
+	<section class="content">
+		<div id="app"></div>
+	</section>
+
+	<noscript>
+
+		<span>Please enable javascript to view this page!!!</span>
+
+	</noscript>
+</body>
+
+</html>
